--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 CouchDB==0.8
 Flask==0.8
+Flask-SQLAlchemy==0.16
 Flask-WTF==0.6
 Jinja2==2.6
+SQLAlchemy==0.7.7
 WTForms==1.0.1
 Werkzeug==0.8.3
+certifi==0.0.8
+chardet==1.0.1
 gevent==0.13.7
 greenlet==0.3.4
-pyes==0.16.0
+kollektions==0.0.1
+oauthlib==0.1.3
+pyasn1==0.1.3
+pyelasticsearch==0.0.6
+requests==0.12.0
+rsa==3.0.1
+simplejson==2.5.0
 wsgiref==0.1.2
